# tobs

./: .coverage  .dockerignore  .env.example  .env.rollback_tier_bc  .env.test  .gitignore  .python-version  BUFFERED_WRITES_MIGRATION.md  DOCKER_QUICKSTART.md  Dockerfile  EXPORT_FIX_SUMMARY.md  OPTIMIZATION_PHASE1_COMPLETE.md  OPTIMIZATION_PHASE1_SUMMARY_RU.md  PERFORMANCE_IMPROVEMENTS.md  PROGRESS_BAR_INTEGRATION.md  README.md  count_messages_code.py  diagnostic_patch.py  diagnostic_run.sh  diagnostic_timing.py  docker-compose.yml  main.py  project_dump.md  pyproject.toml  requirements.txt  rollback_v2.sh  run-tobs.sh  snapshot.py  test.py  test_count_optimization.py  test_count_single_chat.py  test_full_scale_optimization.py  test_hotfix.sh  test_message_count.py  test_peer_user_theory.py  test_takeout_retry.py
bot/: __init__.py  config.py  main.py
bot/handlers/: __init__.py  common_handlers.py  export_handlers.py
bot/keyboards/: __init__.py
bot/middlewares/: __init__.py
bot/services/: __init__.py  archiver.py  exporter_service.py
classes/: __init__.py  cache.py  config.py  interactive_menu.py  media_processor.py  message_processor.py  telegram_exporter.py
docs/: ANALYSIS_SUMMARY.md  APIErrors.html  ARCHITECTURE_ANALYSIS.md  BOTTLENECKS_IDENTIFICATION.md  CHANGELOG.md  CLEANUP_RECOMMENDATIONS.md  CLEANUP_SCRIPT.sh  ConnectionModes.html  DOCKER_ANALYSIS.md  DOCKER_CHANGES_SUMMARY.md  DOCKER_OPTIMIZED.md  DOCKER_RECOMMENDATIONS.md  DOCUMENTATION_CLEANUP.md  DOCUMENTATION_CLEANUP_COMPLETED.md  Helpers.html  IMPLEMENTATION_PLAN.md  IMPLEMENTED_OPTIMIZATIONS_REVIEW.md  OPTIMIZATIONS_ROADMAP.md  OPTIMIZATION_PRIORITIZATION.md  PREFETCH_OPTIMIZATION.md  QUICK_CLEANUP_GUIDE.md  README.md  ROOT_FILES_ANALYSIS.md  Sessions.html  TELETHON_API_ANALYSIS.md  TelegramClient.html  UpdateEvents.html  Utilities.html  telethon_optimizations.md
docs/archive/: ARCHIVE_README.md
examples/: list_usage_examples.py
src/: __init__.py  cache_manager.py  concurrency_manager.py  config.py  core_manager.py  exceptions.py  export_reporter.py  forum_manager.py  hot_zones_manager.py  input_peer_cache.py  logging_context.py  media_processor.py  note_generator.py  reply_linker.py  retry_manager.py  session_gc.py  shutdown_manager.py  telegram_client.py  telegram_dc_utils.py  telegram_sharded_client.py  utils.py
src/auth/: tdesktop.py
src/cli/: __init__.py  parser.py
src/core/: __init__.py  cache.py  cache.py.phase3_task_a2_backup  connection.py  metrics.py  performance.py  thread_pool.py
src/export/: __init__.py  exporter.py  exporter.py.backup  pipeline.py  prefetch_processor.py
src/logging/: global_batcher.py  log_batcher.py
src/media/: README.md  __init__.py  cache.py  download_queue.py  downloader.py  hardware.py  hash_dedup.py  lazy_loader.py  manager.py  metadata.py  models.py  parallel_processor.py  vaapi_detector.py  validators.py  zero_copy.py
src/monitoring/: __init__.py  metrics_collector.py  (+2 more)
stubs/: faster_whisper.pyi  telethon.pyi
tests/: CLEANUP_REPORT.md  README.md  __init__.py  conftest.py  test_async_pipeline.py  test_config_async_pipeline.py  test_dc_routing_config.py  test_dc_utils.py  test_exporter.py  test_exporter_logbatcher_native.py  test_exporter_pipeline_integration.py  test_graceful_shutdown_integration.py  test_hot_zones_manager.py  test_input_peer_cache.py  test_log_batcher.py  test_metrics_collector.py  test_metrics_direct.py  test_metrics_integration.py  test_output_manager.py  test_parallel_media.py  test_phase2_task1_error_handling.py  test_phase2_task2_timeouts.py  test_phase3_task_a1_taskgroup.py  test_phase3_task_b1_metrics.py  test_resource_monitor.py  test_session_gc.py  test_sharded_prewarm_integration.py  test_shutdown_manager.py  test_slotted_dataclasses.py  test_telegram_client_fetch_order.py  test_thread_pool.py  test_tty_detector.py  test_vaapi_detector.py  test_worker_stats_serialization.py  test_zero_copy.py  test_zero_copy_integration.py  ОЧИСТКА_ТЕСТОВ.md
(+127 files in other folders)
