[project]
name = "tobs"
version = "1.0"
description = "Telegram exporter to Markdown format"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiofiles>=24.1.0",
  "aiohttp>=3.11.18",
  "aiohttp-proxy>=0.1.2",
  "aiosignal>=1.3.2",
  "annotated-types>=0.7.0",
  "asyncio>=3.4.3",
  "attrs>=25.3.0",
  "beautifulsoup4>=4.13.4",
  "certifi>=2025.6.15",
  "charset-normalizer>=3.4.2",
  "colorama>=0.4.6",
  "ffmpeg-python>=0.2.0",
  "frozenlist>=1.7.0",
  "future>=1.0.0",
  "idna>=3.10",
  "loguru>=0.7.3",
  "magic-filter>=1.0.12",
  "markdown-it-py>=3.0.0",
  "mdurl>=0.1.2",
  "multidict>=6.6.3",
  "pillow>=11.3.0",
  "propcache>=0.3.2",
  "pyaes>=1.6.1",
  "pyasn1>=0.6.1",
  "pydantic>=2.11.7",
  "pydantic-core>=2.33.2",
  "pygments>=2.19.2",
  "pysocks>=1.7.1",
  "python-dotenv>=1.1.1",
  "redis>=6.2.0",
  "requests>=2.32.4",
  "rich>=14.0.0",
  "rsa>=4.9.1",
  "soupsieve>=2.7",
  "telethon>=1.40.0",
  "typing-extensions>=4.14.0",
  "ujson>=5.10.0",
  "urllib3>=2.5.0",
  "win32-setctime>=1.2.0",
  "yarl>=1.20.1",
]
